--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-<script src=""></script>
+<script src="https://raw.githubusercontent.com/Kar1m113/Assignment2/main/JavaScript/MapOrigin.js"></script>
 <script src="Vis2.js"></script>
 
 <title>Vega-Lite graph </title>
