--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
 <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-<script src="https://raw.githubusercontent.com/Kar1m113/Assignment2/main/JavaScript/MapOrigin.js"></script>
-<script src="Vis2.js"></script>
+<script src="MapOrigin.js"></script>
+<script src="MapAsylum.js"></script>
+<script src="Timeline.js"></script>
+<link rel="stylesheet" href="index.css">
 
 <title>Vega-Lite graph </title>
+
 </head>
 <body>
-    <h1>Timeline of Asylum Seekers for 5 Countries from 1951-2022</h1>
-    <div id="MapOrigin"></div>
-    <h2>Map of the World where Asylum Seekers come From</h2>
-    <div id="Vis2"></div>
+    <h1 >Data Visulisation 2</h1>
+    <h2>Refugees Around the World</h2>
+    <div class="column" id="MapOrigin"></div>
+    <div class="column" id="MapAsylum"></div>
+    <div class="footer">Text</div>
+
+    <h2>Refugees in Australia compared to other Nations</h2>
+    <div class="column" id="Timeline"> </div>
+    <div class="column2">Text asdfadsfadsfas</div>
+    <h2>Australia Migrants and Refugees</h2>
 </body>
 </html>
