--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <h2>Refugees in Australia compared to other Nations</h2>
     <div class="column" id="Timeline"> </div>
-    <div class="column2">Text asdfadsfadsfas</div>
+    <div class="column2">Text 
+    <img width="400" height="500"></div>
     <h2>Australia Migrants and Refugees</h2>
+    <div></div>
 </body>
 </html>
