Occupation and INcome addded

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="MapOrigin.js"></script>
 <script src="MapAsylum.js"></script>
 <script src="Timeline.js"></script>
+<script src="income.js"></script>
 <link rel="stylesheet" href="index.css">
 
 <title>Vega-Lite graph </title>
@@ -27,6 +28,7 @@
     <div class="column2">Text 
     <img width="400" height="500"></div>
     <h2>Australia Migrants and Refugees</h2>
-    <div></div>
+    <div class="column3" id="Income"></div>
+    <
 </body>
 </html>
