Changes and additions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <h1 >Data Visulisation 2</h1>
+    <h1 >Data Visualisation 2</h1>
     <h2>Refugees Around the World</h2>
     <div class="column" id="MapOrigin"></div>
     <div class="column" id="MapAsylum"></div>
@@ -25,10 +25,17 @@
 
     <h2>Refugees in Australia compared to other Nations</h2>
     <div class="column" id="Timeline"> </div>
-    <div class="column2">Text 
-    <img width="400" height="500"></div>
+    <div class="column2">Text </div>
     <h2>Australia Migrants and Refugees</h2>
-    <div class="column3" id="Income"></div>
-    <
+    <div class="column5" id="Income"></div>
+    <div class="column5">TEXT
+    </div>
+    <div class="column5"><img src="dog4.jpg" width="529.27"height="400"></div>
+    <h1 class="p">asdfasdf</h1>
+    <div class="column5"><img src="dog4.jpg" width="529.27"height="400"></div>
+    <div class="column5">TEXT</div>
+    <div class="column5">
+    </div>
+    <div class="column5"></div>
 </body>
 </html>
