--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="MapAsylum.js"></script>
 <script src="Timeline.js"></script>
 <script src="income.js"></script>
+<script src="Occupation.js"></script>
 <link rel="stylesheet" href="index.css">
 
 <title>Vega-Lite graph </title>
@@ -36,6 +37,6 @@
     <div class="column5">TEXT</div>
     <div class="column5">
     </div>
-    <div class="column5"></div>
+    <div class="column5" id="Occupation"></div>
 </body>
 </html>
