--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
     <div class="column5" id="Income"></div>
     <div class="column5">TEXT
     </div>
-    <div class="column5"><img src="dog4.jpg" width="529.27"height="400"></div>
+    <div class="column5"><img src="Refugee1.jpg" width="529.27"height="400"></div>
     <h1 class="p">asdfasdf</h1>
-    <div class="column5"><img src="dog4.jpg" width="529.27"height="400"></div>
-    <div class="column5">TEXT</div>
-    <div class="column5">
-    </div>
+    <div class="column5"><img src="Refugee2.jpg" width="529.27"height="400"></div>
+    <div class="column6">TEXT</div>
     <div class="column5" id="Occupation"></div>
 </body>
 </html>
