--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
     <div class="column5" id="Income"></div>
     <div class="column5">TEXT
     </div>
-    <div class="column5"><img src="Refugee1.jpg" width="529.27"height="400"></div>
-    <h1 class="p">asdfasdf</h1>
+    <div class="column5"><img src="Refugee1.jpg" width="670.27"height="400"></div>
+    <h1 class="p">asdfasdf
+        asdfasdfda
+        sd
+        as
+    </h1>
     <div class="column5"><img src="Refugee2.jpg" width="529.27"height="400"></div>
-    <div class="column6">TEXT</div>
+    <div class="column5">TEXT</div>
     <div class="column5" id="Occupation"></div>
+    <div class="footer">Text</div>
 </body>
 </html>
