--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
     <div class="column" id="Timeline"> </div>
     <div class="column2">Text </div>
     <h2>Australia Migrants and Refugees</h2>
-    <div class="column5" id="Income"></div>
-    <div class="column5">TEXT
-    </div>
-    <div class="column5"><img src="Refugee1.jpg" width="670.27"height="400"></div>
+    <div class="column1" id="Income"></div>
+    <div class="column1"><img src="Refugee1.jpg" width="700"height="400"></div>
     <h1 class="p">asdfasdf
         asdfasdfda
         sd
         as
     </h1>
-    <div class="column5"><img src="Refugee2.jpg" width="529.27"height="400"></div>
-    <div class="column5">TEXT</div>
-    <div class="column5" id="Occupation"></div>
+    <div class="footer">TEXT
+    </div>
+    <h1 class="p">asdfasdf
+        asdfasdfda
+        sd
+        as
+    </h1>
+    <div class="column1"><img src="Refugee2.jpg" width="800"height="400"></div>
+    <div class="column1" id="Occupation"></div>
+    <div></div>
+    <div class="footer">TEXT</div>
 </body>
 </html>
