--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="MapAsylum.js"></script>
 <script src="Timeline.js"></script>
 <script src="income.js"></script>
-<script src="Occupation.js"></script>
+<script src="JobBarChart.js"></script>
 <link rel="stylesheet" href="index.css">
 
 <title>Vega-Lite graph </title>
@@ -43,7 +43,7 @@
         as
     </h1>
     <div class="column1"><img src="Refugee2.jpg" width="800"height="400"></div>
-    <div class="column1" id="Occupation"></div>
+    <div class="column1" id="pleaseWork"></div>
     <div></div>
 </body>
 </html>
