--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         as
     </h1>
     <div class="column1" id="pleaseWork"></div>
+    <div class="column1"><img src="Refugee2.jpg" width="700"height="400"></div>
     <div></div>
 </body>
 </html>
