--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
 <body>
     <h1 >Data Visualisation 2</h1>
     <h2>Refugees Around the World</h2>
-    <div class="column" id="MapOrigin"></div>
-    <div class="column" id="MapAsylum"></div>
+    <div class="column1" id="MapOrigin"></div>
+    <div class="column1" id="MapAsylum"></div>
     <div class="footer">Text</div>
 
     <h2>Refugees in Australia compared to other Nations</h2>
-    <div class="column" id="Timeline"> </div>
-    <div class="column2">Text </div>
+    <div class="column1" id="Timeline"> </div>
+    <div class="column1">Text </div>
+    
     <h2>Australia Migrants and Refugees</h2>
     <div class="column1" id="Income"></div>
-    <div class="column1"><img src="Refugee1.jpg" width="700"height="400"></div>
+    <div class="column1"></div>
     <h1 class="p">asdfasdf
         asdfasdfda
         sd
@@ -42,7 +43,7 @@
         sd
         as
     </h1>
-    <div class="column1"><img src="Refugee2.jpg" width="700"height="400"></div>
+    <div class="column1"></div>
     <div class="column1" id="pleaseWork"></div>
     <div></div>
 </body>
