Added html with better layout and edited filed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="Timeline.js"></script>
 <script src="income.js"></script>
 <script src="JobBarChart.js"></script>
+<script src="Occupation.js"></script>
 <link rel="stylesheet" href="index.css">
 
 <title>Vega-Lite graph </title>
@@ -27,7 +28,7 @@
     <h2>Refugees in Australia compared to other Nations</h2>
     <div class="column1" id="Timeline"> </div>
     <div class="column1">Text </div>
-    
+    <div class="footer">Text</div>
     <h2>Australia Migrants and Refugees</h2>
     <div class="column1" id="Income"></div>
     <div class="column1"></div>
@@ -44,7 +45,7 @@
         as
     </h1>
     <div class="column1"></div>
-    <div class="column1" id="pleaseWork"></div>
+    <div class="column1" id="Occupation"></div>
     <div></div>
 </body>
 </html>
