--- a/test.html
+++ b/test.html
@@ -18,6 +18,7 @@
      h1 {text-align: center;}
      h2 {text-align: center;}  
      h4 {text-align: center;} 
+     h6{text-align: center;}
     /* Set additional styling options for the columns */
     .column {
     float: left;
@@ -43,40 +44,45 @@
     }
     </style>
  </head>
- <body>
-<header><h1>Data Visulisation 2</h1></header>
+ <body >
+<header ><h1>Data Visulisation 2</h1></header>
 <header><h4>By Karim Hajlaoui</h4></header>
     <header><h2>Refugees Around the World</h2></header>
     <div class="row">
-        <div class="column left" style="background-color:#FFB695;">
+        <div class="column left" style="background-color:#87CEEB;">
             <h2>Column 1</h2>
             <p id="MapOrigin">Data..</p>
+            <p><h6>Figure 1</h6></p>
         </div>
-        <div class="column right" style="background-color:#74C3E1;">
+        <div class="column right" style="background-color:#87CEEB;">
             <h2>Column 3</h2>
             <p id="MapAsylum">Data..</p>
+            <p><h6>Figure 2</h6></p>
         </div>
     </div>
     <header><h2>Refugees in Australia compared to other Nations</h2></header>
     <div class="row">
-        <div class="column left" style="background-color:#FFB695;">
+        <div class="column left" style="background-color:#87CEEB;">
             <h2>Column 1</h2>
             <p id="Timeline">Data..</p>
+            <p><h6>Figure 3</h6></p>
         </div>
-        <div class="column right" style="background-color:#74C3E1;">
+        <div class="column right" style="background-color:#87CEEB;">
             <h2>Column 3</h2>
             <p>Data..</p>
         </div>
     </div>
     <header><h2>Australia Migrants and Refugees</h2></header>
     <div class="row">
-        <div class="column left" style="background-color:#FFB695;">
+        <div class="column left" style="background-color:#87CEEB;">
             <h2>Column 1</h2>
             <p id="Income">Data..</p>
+            <p><h6>Figure 4</h6></p>
         </div>
-        <div class="column right" style="background-color:#74C3E1;">
+        <div class="column right" style="background-color:#87CEEB;">
             <h2>Column 3</h2>
             <p id="Occupation">Data..</p>
+            <p><h6>Figure 5</h6></p>
         </div>
     </div>
     <div class="row"></div>
