--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
     </style>
  </head>
  <body >
-<header ><h1>Data Visulisation 2</h1></header>
+<header ><h1>Data Visualisation 2</h1></header>
 <header><h4>By Karim Hajlaoui</h4></header>
     <header><h2>Refugees Around the World</h2></header>
     <div class="row">
