--- a/test.html
+++ b/test.html
@@ -19,6 +19,7 @@
      h2 {text-align: center;}  
      h4 {text-align: center;} 
      h6{text-align: center;}
+     p{text-align: center;}
     /* Set additional styling options for the columns */
     .column {
     float: left;
@@ -45,9 +46,9 @@
     </style>
  </head>
  <body >
-<header ><h1>Data Visualisation 2</h1></header>
-<header><h4>By Karim Hajlaoui</h4></header>
-    <header><h2>Refugees Around the World</h2></header>
+<header ><h1 style="font-size: 60px"> Data Visualisation 2</h1></header>
+<header><h4 style="font-size: 30px">By Karim Hajlaoui</h4></header>
+    <header><h2 style="background-color:#3C7EC9;" >Refugees Around the World</h2></header>
     <div class="row">
         <div class="column left" style="background-color:#87CEEB;">
             <h2>Column 1</h2>
@@ -60,19 +61,44 @@
             <p><h6>Figure 2</h6></p>
         </div>
     </div>
-    <header><h2>Refugees in Australia compared to other Nations</h2></header>
+    <div class="footer" style="background-color:#87CEEB;">
+        <p>Data..</p>
+        <p>Data..</p>
+        <p>Data..</p>
+
+
+
+    </div>
+    <header><h2 style="background-color:#3C7EC9;"> Refugees in Australia compared to other Nations</h2></header>
     <div class="row">
         <div class="column left" style="background-color:#87CEEB;">
-            <h2>Column 1</h2>
+            <h3>Column 1</h3>
             <p id="Timeline">Data..</p>
             <p><h6>Figure 3</h6></p>
         </div>
         <div class="column right" style="background-color:#87CEEB;">
-            <h2>Column 3</h2>
+            <h2></h2>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
+            <p>Data..</p>
             <p>Data..</p>
         </div>
     </div>
-    <header><h2>Australia Migrants and Refugees</h2></header>
+    <header><h2 style="background-color:#3C7EC9;">Australia Migrants and Refugees</h2></header>
     <div class="row">
         <div class="column left" style="background-color:#87CEEB;">
             <h2>Column 1</h2>
@@ -85,6 +111,13 @@
             <p><h6>Figure 5</h6></p>
         </div>
     </div>
-    <div class="row"></div>
+    <div class="footer" style="background-color:#87CEEB;">
+        <p>Data..</p>
+        <p>Data..</p>
+        <p>Data..</p>
+
+
+
+    </div>
  </body>
 </html>
