update the colour layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 
     </style>
  </head>
- <body >
+ <body style="background-color:#3C7EC9;">
 <header ><h1 style="font-size: 60px"> Data Visualisation 2</h1></header>
 <header><h4 style="font-size: 30px">By Karim Hajlaoui</h4></header>
     <header><h2 style="background-color:#3C7EC9;" >Refugees Around the World</h2></header>
