changed background colour

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     </style>
  </head>
- <body style="background-color:#3C7EC9;">
+ <body>
 <header ><h1 style="font-size: 60px"> Data Visualisation 2</h1></header>
 <header><h4 style="font-size: 30px">By Karim Hajlaoui</h4></header>
     <header><h2 style="background-color:#3C7EC9;" >Refugees Around the World</h2></header>
     <div class="row">
-        <div class="column left" style="background-color:#87CEEB;">
+        <div class="column left">
             <h3>Where do refugees come from?</h3>
             <p id="MapOrigin">Data..</p>
             <p><h6>Figure 1 - Choropleth map</h6></p>
@@ -37,7 +37,7 @@
         <p> from countries in Central America.</p>
         <p>Note. These values have been normalised with a log scale.</p>
         </div>
-        <div class="column right" style="background-color:#87CEEB;">
+        <div class="column right" >
             <h3>Which countries do refugees go to?</h3>
             <p id="MapAsylum">Data..</p>
             <p><h6>Figure 2 - Choropleth map</h6></p>
@@ -57,12 +57,12 @@
     </div>
     <header><h2 style="background-color:#3C7EC9;"> Refugees in Australia compared to other Nations</h2></header>
     <div class="row">
-        <div class="column left" style="background-color:#87CEEB;">
+        <div class="column left" >
             <h3>Timeline of refugees arriving</h3>
             <p id="Timeline">Data..</p>
             <p><h6>Figure 3 - Line Chart</h6></p>
         </div>
-        <div class="column right" style="background-color:#87CEEB;">
+        <div class="column right" >
             <h2></h2>
             <p style="opacity: 0.0">Data..</p>
             <p style="opacity: 0.0">Data..</p>
@@ -86,7 +86,7 @@
     </div>
     <header><h2 style="background-color:#3C7EC9;">Australia Migrants and Refugees</h2></header>
     <div class="row">
-        <div class="column left" style="background-color:#87CEEB;">
+        <div class="column left" >
             <h3>Income of Australian Refugees</h3>
             <p id="Income">Data..</p>
             <p><h6>Figure 4 - Bar Chart</h6></p>
@@ -102,7 +102,7 @@
         <p style="opacity: 0.0">Data..</p>
         <p style="opacity: 0.0">Data..</p>
         </div>
-        <div class="column right" style="background-color:#87CEEB;">
+        <div class="column right" >
             <h3>Occupation of Working Australian Refugees</h3>
             <p id="Occupation">Data..</p>
             <p><h6>Figure 5 - Stacked Bar Chart</h6></p>
