updated and finalised

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 <script src="JobBarChart.js"></script>
 <script src="Occupation.js"></script>
 <link rel="stylesheet" href="index.css">
-
     </style>
  </head>
  <body>
-<header ><h1 style="font-size: 60px"> Data Visualisation 2</h1></header>
+<header ><h1 style="font-size: 60px">Refugees and Asylum Seekers</h1></header>
 <header><h4 style="font-size: 30px">By Karim Hajlaoui</h4></header>
-    <header><h2 style="background-color:#3C7EC9;" >Refugees Around the World</h2></header>
+    <header><h2 style="background-color:#3C7EC9;" >Refugees Around the World in 2022</h2></header>
     <div class="row">
         <div class="column left">
             <h3>Where do refugees come from?</h3>
@@ -95,7 +94,7 @@
         <p>Furthermore, the distribution along the bar chart is almost symmetrical</p>
         <p>This means that most refugees living in Australia are</p>
         <p>earning around $1,000, which is below the weekly income</p>
-        <p>average of $1,400.</p>
+        <p>average of $1,400 from the Australian Bureau of Statistics.</p>
         <p style="opacity: 0.0">Data..</p>
         <p style="opacity: 0.0">Data..</p>
         <p style="opacity: 0.0">Data..</p>
