--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
  </head>
  <body>
-<header ><h1 style="font-size: 60px">Refugees and Asylum Seekers</h1></header>
+<header ><h1 style="font-size: 65px">Refugees and Asylum Seekers</h1></header>
 <header><h4 style="font-size: 30px">By Karim Hajlaoui</h4></header>
     <header><h2 style="background-color:#3C7EC9;" >Refugees Around the World in 2022</h2></header>
     <div class="row">
@@ -30,8 +30,9 @@
         <p>the highest number of Asylum Seekers that left that country.</p>
         <p>Looking at the map, it can be seen that the</p>
         <p>countries with the most refugees leaving is</p>
-        <p>Cuba, Guatemala and Honduras, with the total number of refugees</p>
-        <p>leaving are 1687480, 1571130 and 1287800 respectively.</p>
+        <p style="font-weight: bold;">Cuba, Guatemala and Honduras,</p>
+        <p>with the total number of refugees leaving are </p>
+        <p><p style="font-weight: bold;">1687480, 1571130 and 1287800 respectively.</p></p>
         <p>This data illustrates the ethnicities of most refugees are</p>
         <p> from countries in Central America.</p>
         <p>Note. These values have been normalised with a log scale.</p>
@@ -43,9 +44,10 @@
             <p>The Choropleth map above is showing the distribution of </p>
         <p>refugees amongst the countries that they flee to.</p>
         <p>The map shows that the highest number of Asylum Seekers</p>
-        <p>go to countries like Colombia, Trindad and Tobago and Jordan.</p>
+        <p>go to countries like</p>
+        <p style="font-weight: bold;">Colombia, Trindad and Tobago and Jordan.</p>
         <p>The number of Asylum Seekers leaving these countries are</p>
-        <p>223450, 180380 and 109690 respectively.</p>
+        <p><p style="font-weight: bold;">223450, 180380 and 109690 respectively.</p></p>
         <p>This data presents that refugees are seeking refuge in countries</p>
         <p>that are near by their home due to the</p>
         <p>lack of quality of life, caused by wars or poverty.</p>
@@ -66,17 +68,18 @@
             <p style="opacity: 0.0">Data..</p>
             <p style="opacity: 0.0">Data..</p>
             <p>The line chart to the left is a timeline from</p>
-            <p>2012 to 2022, showing the number of refugees that</p>
-            <p>entered a country each year.</p>
+            <p><p style="font-weight: bold;">2012 to 2022,</p>
+            <p>showing the number of refugees that entered a country each year.</p>
             <p>The 5 countries that were used for the line chart are</p>
             <p>Australia, Malaysia, United States of America, Great Britain and Netherlands.</p>
             <p>The visualisation shows that all countries are having increasing number</p>
             <p>of refugees entering their countries. Especially for european countries,</p>
-            <p>Great Britain has had a 140% in total number of</p>
-            <p>refugees entering from 2021 to 2022. Also, the Netherlands has</p>
-            <p>increased by 119% of its total number of refugees in 2021.</p>
+            <p>Great Britain has had a </p>
+            <p style="font-weight: bold;">140% in total number of refugees entering from 2021 to 2022. </p>
+            <p>Also, the Netherlands has</p>
+            <p style="font-weight: bold;">increased by 119% of its total number of refugees in 2021.</p>
             <p>This behaviour can also be seen in the USA,</p>
-            <p>where its total increased by 7%.</p>
+            <p style="font-weight: bold;">where its total increased by 7%.</p>
             <p>However, this drastic increase does not apply to Australia and </p>
             <p>Malaysia. The total number of refugees in these countries</p>
             <p>has plateaued in recent years.</p>
@@ -90,16 +93,16 @@
             <p id="Income">Data..</p>
             <p><h6>Figure 4 - Bar Chart</h6></p>
             <p>Looking at the bar chart, it can be seen that</p>
-        <p>most refugees have an income that is between $650-$999.</p>
+        <p style="font-weight: bold;">306,185 refugees have an income that is between $650-$999.</p>
+        <p style="font-weight: bold;">Also, there are 296,826 refugees earning $1000-$1499,</p>
+        <p>which is a 10,000 difference with the highest income range.</p>
+        <p>In terms of percentage, these two ranges are covering </p>
+        <p style="font-weight: bold;">23.1% and 23.8% respectively of total Australian refugee population</p>
         <p>Furthermore, the distribution along the bar chart is almost symmetrical</p>
         <p>This means that most refugees living in Australia are</p>
-        <p>earning around $1,000, which is below the weekly income</p>
-        <p>average of $1,400 from the Australian Bureau of Statistics.</p>
-        <p style="opacity: 0.0">Data..</p>
-        <p style="opacity: 0.0">Data..</p>
-        <p style="opacity: 0.0">Data..</p>
-        <p style="opacity: 0.0">Data..</p>
-        <p style="opacity: 0.0">Data..</p>
+        <p>earning around $1,000</p>
+        <p style="font-weight: bold;">Despite of this, 5% of refugees are earning $3,000 or more</p>
+        <p style="font-weight: bold;">compared to 0.8% of refugees that have no income.</p>
         </div>
         <div class="column right" >
             <h3>Occupation of Working Australian Refugees</h3>
@@ -110,12 +113,12 @@
             <p>From the visualisation, there are certain occupations where</p>
             <p>it is majority of males with that occupation or females.</p>
             <p>This can be seen for Automotive Trade Workers,</p>
-            <p>where only 363 females have that occupation compared to</p>
-            <p>27,890 males. This gives a ratio of 1 female: 77 males</p>
-            <p>This distribution can be seen in other occupations such as</p>
-            <p>Construction workers and Rail/Road Drivers.</p>
+            <p style="font-weight: bold;">where only 363 females have that occupation compared to</p>
+            <p style="font-weight: bold;">27,890 males. This gives a ratio of 1 female: 77 males</p>
             <p>However, females are dominating other occupations such as</p>
             <p>Carers, Professional Educators and Health Professionals</p>
+            <p>It can be seen that females have percentages of</p>
+            <p style="font-weight: bold;"> 82.9%, 65.1% and 70.5% respectively in these occupations.</p>
         </div>
     </div>
     
